versions/y.output
   0  $accept : program $end

   1  program : definitions usercode

   2  definitions : crowd_definitions park_definition crowd_definitions

   3  crowd_definitions : crowd_definitions crowd_definition
   4                    | error_production

   5  usercode : start functions

   6  crowd_definition : Crowd crowd_name crowd_elements

   7  crowd_elements : SEMICOLON
   8                 | crowd_attributes

   9  crowd_attributes : crowd_attributes crowd_attribute
  10                   | error_production

  11  crowd_attribute : c1
  12                  | c2
  13                  | c3
  14                  | c4

  15  c1 : Set SpendingCapacity NUMBER SEMICOLON

  16  c2 : Set Size NUMBER SEMICOLON

  17  c3 : Set EnergyLevel NUMBER SEMICOLON

  18  c4 : Set ThrillLevel NUMBER SEMICOLON

  19  $$1 :

  20  park_definition : Park park_name park_elements $$1 land_definitions

  21  park_elements : SEMICOLON
  22                | park_attributes

  23  park_attributes : park_attributes park_attribute
  24                  | error_production

  25  park_attribute : p1
  26                 | p2
  27                 | p3

  28  p1 : Set Admission NUMBER SEMICOLON

  29  p2 : Set Capacity NUMBER SEMICOLON

  30  p3 : Set Cost NUMBER SEMICOLON

  31  land_definitions : land_definitions land_definition
  32                   | error_production

  33  $$2 :

  34  land_definition : Land land_name $$2 land_attributes land_elements

  35  land_attributes : Set Location NUMBER SEMICOLON

  36  land_elements : land_elements land_element
  37                | error_production

  38  land_element : attraction_definition
  39               | restaurant_definition
  40               | store_definition

  41  $$3 :

  42  attraction_definition : Attraction attraction_name $$3 In land_name attraction_attributes

  43  attraction_attributes : SEMICOLON
  44                        | attraction_attributes attraction_attribute
  45                        | error_production

  46  attraction_attribute : a1
  47                       | a2
  48                       | a3
  49                       | a4
  50                       | a5

  51  a1 : Set Cost NUMBER SEMICOLON

  52  a2 : Set Capacity NUMBER SEMICOLON

  53  a3 : Set Employees NUMBER SEMICOLON

  54  a4 : Set ThrillLevel NUMBER SEMICOLON

  55  a5 : Set EnergyLost NUMBER SEMICOLON

  56  $$4 :

  57  restaurant_definition : Restaurant restaurant_name $$4 In land_name restaurant_attributes

  58  restaurant_attributes : SEMICOLON
  59                        | restaurant_attributes restaurant_attribute
  60                        | error_production

  61  restaurant_attribute : r1
  62                       | r2
  63                       | r3
  64                       | r4
  65                       | r5

  66  r1 : Set Cost NUMBER SEMICOLON

  67  r2 : Set Capacity NUMBER SEMICOLON

  68  r3 : Set Employees NUMBER SEMICOLON

  69  r4 : Set SpendLevel NUMBER SEMICOLON

  70  r5 : Set EnergyIncrease NUMBER SEMICOLON

  71  $$5 :

  72  store_definition : Store store_name $$5 In land_name store_attributes

  73  store_attributes : SEMICOLON
  74                   | store_attributes store_attribute
  75                   | error_production

  76  store_attribute : s1
  77                  | s2
  78                  | s3
  79                  | s4

  80  s1 : Set Cost NUMBER SEMICOLON

  81  s2 : Set Capacity NUMBER SEMICOLON

  82  s3 : Set Employees NUMBER SEMICOLON

  83  s4 : Set SpendLevel NUMBER SEMICOLON

  84  $$6 :

  85  start : Start $$6 COLON block

  86  functions : functions function
  87            | error_production

  88  $$7 :

  89  function : return_type function_name $$7 COLON actual_parameters block

  90  return_type : Number
  91              | String
  92              | error_production

  93  actual_parameters : actual_parameters COMMA data_type variable_name
  94                    | data_type variable_name
  95                    | error_production

  96  block : start_block statements end_block

  97  start_block : OPEN_PARAN

  98  end_block : CLOSE_PARAN

  99  statements : statements statement
 100             | error_production

 101  statement : add_attribute
 102            | assignment
 103            | condition
 104            | declaration
 105            | function_call
 106            | initialization
 107            | initialize_duration
 108            | loop
 109            | return
 110            | thrill_functions

 111  add_attribute : Set Capacity value In variable_name SEMICOLON
 112                | Set Cost value In variable_name SEMICOLON
 113                | Set Employees value In variable_name SEMICOLON
 114                | Set EnergyIncrease value In variable_name SEMICOLON
 115                | Set EnergyLevel value In variable_name SEMICOLON
 116                | Set EnergyLost value In variable_name SEMICOLON
 117                | Set Size value In variable_name SEMICOLON
 118                | Set SpendingCapacity value In variable_name SEMICOLON
 119                | Set SpendLevel value In variable_name SEMICOLON
 120                | Set ThrillLevel value In variable_name SEMICOLON

 121  assignment : left_side EQUAL right_side

 122  left_side : variable_name

 123  right_side : variable_name SEMICOLON
 124             | arithmetic_expression SEMICOLON
 125             | function_call
 126             | calculate_revenue

 127  arithmetic_expression : arithmetic_expression PLUS arithmetic_expression
 128                        | arithmetic_expression MINUS arithmetic_expression
 129                        | arithmetic_expression MUL arithmetic_expression
 130                        | arithmetic_expression DIV arithmetic_expression
 131                        | OPEN arithmetic_expression CLOSE
 132                        | variable_name
 133                        | constant

 134  condition : If OPEN relational_expression CLOSE block
 135            | If OPEN relational_expression CLOSE block Else block

 136  relational_expression : variable_name LESSEQUAL constant_or_variable
 137                        | variable_name GREATEQUAL constant_or_variable
 138                        | variable_name NOTEQUAL constant_or_variable
 139                        | variable_name LESS constant_or_variable
 140                        | variable_name GREAT constant_or_variable
 141                        | variable_name ISEQUAL constant_or_variable

 142  declaration : primitive_type declaration_list SEMICOLON

 143  declaration_list : declaration_list COMMA variable_name
 144                   | variable_name

 145  function_call : function_name COLON formal_parameters SEMICOLON

 146  formal_parameters : formal_parameters COMMA variable_name
 147                    | variable_name
 148                    | error_production

 149  initialization : primitive_type initialization_list SEMICOLON

 150  initialization_list : initialization_list COMMA variable_name EQUAL constant
 151                      | variable_name EQUAL constant

 152  initialize_duration : duration_type variable_name EQUAL NUMBER SEMICOLON

 153  loop : Iterate block Until OPEN relational_expression CLOSE SEMICOLON

 154  return : Return constant_or_variable SEMICOLON
 155         | Return SEMICOLON

 156  thrill_functions : calculate_revenue
 157                   | output
 158                   | simulate

 159  calculate_revenue : CalculateRevenue COLON crowd_name COMMA duration_name SEMICOLON

 160  output : Print constant_variable_chain SEMICOLON

 161  simulate : Simulate COLON crowd_name SEMICOLON

 162  constant_variable_chain : constant_variable_chain COMMA constant_or_variable
 163                          | constant_or_variable

 164  constant_or_variable : constant
 165                       | variable_name

 166  data_type : Crowd
 167            | primitive_type

 168  primitive_type : Number
 169                 | String

 170  duration_type : Days
 171                | Weeks
 172                | Months
 173                | Years

 174  constant : NUMBER
 175           | STRING_CONST

 176  value : NUMBER
 177        | variable_name

 178  attraction_name : variable_name

 179  crowd_name : variable_name

 180  duration_name : variable_name

 181  function_name : variable_name

 182  land_name : variable_name

 183  park_name : variable_name

 184  restaurant_name : variable_name

 185  store_name : variable_name

 186  variable_name : ID

 187  error_production : empty

 188  empty :

state 0
	$accept : . program $end  (0)
	empty : .  (188)

	.  reduce 188

	program  goto 1
	crowd_definitions  goto 2
	definitions  goto 3
	error_production  goto 4
	empty  goto 5


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	definitions : crowd_definitions . park_definition crowd_definitions  (2)
	crowd_definitions : crowd_definitions . crowd_definition  (3)

	Crowd  shift 6
	Park  shift 7
	.  error

	crowd_definition  goto 8
	park_definition  goto 9


state 3
	program : definitions . usercode  (1)

	Start  shift 10
	.  error

	start  goto 11
	usercode  goto 12


state 4
	crowd_definitions : error_production .  (4)

	.  reduce 4


state 5
	error_production : empty .  (187)

	.  reduce 187


state 6
	crowd_definition : Crowd . crowd_name crowd_elements  (6)

	ID  shift 13
	.  error

	crowd_name  goto 14
	variable_name  goto 15


state 7
	park_definition : Park . park_name park_elements $$1 land_definitions  (20)

	ID  shift 13
	.  error

	park_name  goto 16
	variable_name  goto 17


state 8
	crowd_definitions : crowd_definitions crowd_definition .  (3)

	.  reduce 3


state 9
	definitions : crowd_definitions park_definition . crowd_definitions  (2)
	empty : .  (188)

	.  reduce 188

	crowd_definitions  goto 18
	error_production  goto 4
	empty  goto 5


state 10
	start : Start . $$6 COLON block  (85)
	$$6 : .  (84)

	.  reduce 84

	$$6  goto 19


state 11
	usercode : start . functions  (5)
	empty : .  (188)

	.  reduce 188

	functions  goto 20
	error_production  goto 21
	empty  goto 5


state 12
	program : definitions usercode .  (1)

	.  reduce 1


state 13
	variable_name : ID .  (186)

	.  reduce 186


state 14
	crowd_definition : Crowd crowd_name . crowd_elements  (6)
	empty : .  (188)

	SEMICOLON  shift 22
	Crowd  reduce 188
	Park  reduce 188
	Set  reduce 188
	Start  reduce 188

	crowd_attributes  goto 23
	crowd_elements  goto 24
	error_production  goto 25
	empty  goto 5


state 15
	crowd_name : variable_name .  (179)

	.  reduce 179


state 16
	park_definition : Park park_name . park_elements $$1 land_definitions  (20)
	empty : .  (188)

	SEMICOLON  shift 26
	Crowd  reduce 188
	Land  reduce 188
	Set  reduce 188
	Start  reduce 188

	park_attributes  goto 27
	park_elements  goto 28
	error_production  goto 29
	empty  goto 5


state 17
	park_name : variable_name .  (183)

	.  reduce 183


state 18
	definitions : crowd_definitions park_definition crowd_definitions .  (2)
	crowd_definitions : crowd_definitions . crowd_definition  (3)

	Crowd  shift 6
	Start  reduce 2

	crowd_definition  goto 8


state 19
	start : Start $$6 . COLON block  (85)

	COLON  shift 30
	.  error


state 20
	usercode : start functions .  (5)
	functions : functions . function  (86)
	empty : .  (188)

	Number  shift 31
	String  shift 32
	$end  reduce 5
	ID  reduce 188

	return_type  goto 33
	function  goto 34
	error_production  goto 35
	empty  goto 5


state 21
	functions : error_production .  (87)

	.  reduce 87


state 22
	crowd_elements : SEMICOLON .  (7)

	.  reduce 7


state 23
	crowd_elements : crowd_attributes .  (8)
	crowd_attributes : crowd_attributes . crowd_attribute  (9)

	Set  shift 36
	Crowd  reduce 8
	Park  reduce 8
	Start  reduce 8

	crowd_attribute  goto 37
	c1  goto 38
	c2  goto 39
	c3  goto 40
	c4  goto 41


state 24
	crowd_definition : Crowd crowd_name crowd_elements .  (6)

	.  reduce 6


state 25
	crowd_attributes : error_production .  (10)

	.  reduce 10


state 26
	park_elements : SEMICOLON .  (21)

	.  reduce 21


state 27
	park_elements : park_attributes .  (22)
	park_attributes : park_attributes . park_attribute  (23)

	Set  shift 42
	Crowd  reduce 22
	Land  reduce 22
	Start  reduce 22

	park_attribute  goto 43
	p1  goto 44
	p2  goto 45
	p3  goto 46


state 28
	park_definition : Park park_name park_elements . $$1 land_definitions  (20)
	$$1 : .  (19)

	.  reduce 19

	$$1  goto 47


state 29
	park_attributes : error_production .  (24)

	.  reduce 24


state 30
	start : Start $$6 COLON . block  (85)

	OPEN_PARAN  shift 48
	.  error

	block  goto 49
	start_block  goto 50


state 31
	return_type : Number .  (90)

	.  reduce 90


state 32
	return_type : String .  (91)

	.  reduce 91


state 33
	function : return_type . function_name $$7 COLON actual_parameters block  (89)

	ID  shift 13
	.  error

	function_name  goto 51
	variable_name  goto 52


state 34
	functions : functions function .  (86)

	.  reduce 86


state 35
	return_type : error_production .  (92)

	.  reduce 92


state 36
	c1 : Set . SpendingCapacity NUMBER SEMICOLON  (15)
	c2 : Set . Size NUMBER SEMICOLON  (16)
	c3 : Set . EnergyLevel NUMBER SEMICOLON  (17)
	c4 : Set . ThrillLevel NUMBER SEMICOLON  (18)

	EnergyLevel  shift 53
	Size  shift 54
	SpendingCapacity  shift 55
	ThrillLevel  shift 56
	.  error


state 37
	crowd_attributes : crowd_attributes crowd_attribute .  (9)

	.  reduce 9


state 38
	crowd_attribute : c1 .  (11)

	.  reduce 11


state 39
	crowd_attribute : c2 .  (12)

	.  reduce 12


state 40
	crowd_attribute : c3 .  (13)

	.  reduce 13


state 41
	crowd_attribute : c4 .  (14)

	.  reduce 14


state 42
	p1 : Set . Admission NUMBER SEMICOLON  (28)
	p2 : Set . Capacity NUMBER SEMICOLON  (29)
	p3 : Set . Cost NUMBER SEMICOLON  (30)

	Admission  shift 57
	Capacity  shift 58
	Cost  shift 59
	.  error


state 43
	park_attributes : park_attributes park_attribute .  (23)

	.  reduce 23


state 44
	park_attribute : p1 .  (25)

	.  reduce 25


state 45
	park_attribute : p2 .  (26)

	.  reduce 26


state 46
	park_attribute : p3 .  (27)

	.  reduce 27


state 47
	park_definition : Park park_name park_elements $$1 . land_definitions  (20)
	empty : .  (188)

	.  reduce 188

	land_definitions  goto 60
	error_production  goto 61
	empty  goto 5


state 48
	start_block : OPEN_PARAN .  (97)

	.  reduce 97


state 49
	start : Start $$6 COLON block .  (85)

	.  reduce 85


state 50
	block : start_block . statements end_block  (96)
	empty : .  (188)

	.  reduce 188

	statements  goto 62
	error_production  goto 63
	empty  goto 5


state 51
	function : return_type function_name . $$7 COLON actual_parameters block  (89)
	$$7 : .  (88)

	.  reduce 88

	$$7  goto 64


state 52
	function_name : variable_name .  (181)

	.  reduce 181


state 53
	c3 : Set EnergyLevel . NUMBER SEMICOLON  (17)

	NUMBER  shift 65
	.  error


state 54
	c2 : Set Size . NUMBER SEMICOLON  (16)

	NUMBER  shift 66
	.  error


state 55
	c1 : Set SpendingCapacity . NUMBER SEMICOLON  (15)

	NUMBER  shift 67
	.  error


state 56
	c4 : Set ThrillLevel . NUMBER SEMICOLON  (18)

	NUMBER  shift 68
	.  error


state 57
	p1 : Set Admission . NUMBER SEMICOLON  (28)

	NUMBER  shift 69
	.  error


state 58
	p2 : Set Capacity . NUMBER SEMICOLON  (29)

	NUMBER  shift 70
	.  error


state 59
	p3 : Set Cost . NUMBER SEMICOLON  (30)

	NUMBER  shift 71
	.  error


state 60
	park_definition : Park park_name park_elements $$1 land_definitions .  (20)
	land_definitions : land_definitions . land_definition  (31)

	Land  shift 72
	Crowd  reduce 20
	Start  reduce 20

	land_definition  goto 73


state 61
	land_definitions : error_production .  (32)

	.  reduce 32


state 62
	block : start_block statements . end_block  (96)
	statements : statements . statement  (99)

	ID  shift 13
	CLOSE_PARAN  shift 74
	If  shift 75
	Iterate  shift 76
	Number  shift 77
	Return  shift 78
	Set  shift 79
	String  shift 80
	CalculateRevenue  shift 81
	Print  shift 82
	Simulate  shift 83
	Days  shift 84
	Months  shift 85
	Weeks  shift 86
	Years  shift 87
	.  error

	function_name  goto 88
	variable_name  goto 89
	primitive_type  goto 90
	simulate  goto 91
	output  goto 92
	duration_type  goto 93
	calculate_revenue  goto 94
	thrill_functions  goto 95
	initialization  goto 96
	function_call  goto 97
	declaration  goto 98
	left_side  goto 99
	assignment  goto 100
	add_attribute  goto 101
	statement  goto 102
	loop  goto 103
	condition  goto 104
	return  goto 105
	initialize_duration  goto 106
	end_block  goto 107


state 63
	statements : error_production .  (100)

	.  reduce 100


state 64
	function : return_type function_name $$7 . COLON actual_parameters block  (89)

	COLON  shift 108
	.  error


state 65
	c3 : Set EnergyLevel NUMBER . SEMICOLON  (17)

	SEMICOLON  shift 109
	.  error


state 66
	c2 : Set Size NUMBER . SEMICOLON  (16)

	SEMICOLON  shift 110
	.  error


state 67
	c1 : Set SpendingCapacity NUMBER . SEMICOLON  (15)

	SEMICOLON  shift 111
	.  error


state 68
	c4 : Set ThrillLevel NUMBER . SEMICOLON  (18)

	SEMICOLON  shift 112
	.  error


state 69
	p1 : Set Admission NUMBER . SEMICOLON  (28)

	SEMICOLON  shift 113
	.  error


state 70
	p2 : Set Capacity NUMBER . SEMICOLON  (29)

	SEMICOLON  shift 114
	.  error


state 71
	p3 : Set Cost NUMBER . SEMICOLON  (30)

	SEMICOLON  shift 115
	.  error


state 72
	land_definition : Land . land_name $$2 land_attributes land_elements  (34)

	ID  shift 13
	.  error

	land_name  goto 116
	variable_name  goto 117


state 73
	land_definitions : land_definitions land_definition .  (31)

	.  reduce 31


state 74
	end_block : CLOSE_PARAN .  (98)

	.  reduce 98


state 75
	condition : If . OPEN relational_expression CLOSE block  (134)
	condition : If . OPEN relational_expression CLOSE block Else block  (135)

	OPEN  shift 118
	.  error


state 76
	loop : Iterate . block Until OPEN relational_expression CLOSE SEMICOLON  (153)

	OPEN_PARAN  shift 48
	.  error

	block  goto 119
	start_block  goto 50


state 77
	primitive_type : Number .  (168)

	.  reduce 168


state 78
	return : Return . constant_or_variable SEMICOLON  (154)
	return : Return . SEMICOLON  (155)

	NUMBER  shift 120
	ID  shift 13
	SEMICOLON  shift 121
	STRING_CONST  shift 122
	.  error

	variable_name  goto 123
	constant  goto 124
	constant_or_variable  goto 125


state 79
	add_attribute : Set . Capacity value In variable_name SEMICOLON  (111)
	add_attribute : Set . Cost value In variable_name SEMICOLON  (112)
	add_attribute : Set . Employees value In variable_name SEMICOLON  (113)
	add_attribute : Set . EnergyIncrease value In variable_name SEMICOLON  (114)
	add_attribute : Set . EnergyLevel value In variable_name SEMICOLON  (115)
	add_attribute : Set . EnergyLost value In variable_name SEMICOLON  (116)
	add_attribute : Set . Size value In variable_name SEMICOLON  (117)
	add_attribute : Set . SpendingCapacity value In variable_name SEMICOLON  (118)
	add_attribute : Set . SpendLevel value In variable_name SEMICOLON  (119)
	add_attribute : Set . ThrillLevel value In variable_name SEMICOLON  (120)

	Capacity  shift 126
	Cost  shift 127
	Employees  shift 128
	EnergyIncrease  shift 129
	EnergyLevel  shift 130
	EnergyLost  shift 131
	Size  shift 132
	SpendLevel  shift 133
	SpendingCapacity  shift 134
	ThrillLevel  shift 135
	.  error


state 80
	primitive_type : String .  (169)

	.  reduce 169


state 81
	calculate_revenue : CalculateRevenue . COLON crowd_name COMMA duration_name SEMICOLON  (159)

	COLON  shift 136
	.  error


state 82
	output : Print . constant_variable_chain SEMICOLON  (160)

	NUMBER  shift 120
	ID  shift 13
	STRING_CONST  shift 122
	.  error

	variable_name  goto 123
	constant  goto 124
	constant_or_variable  goto 137
	constant_variable_chain  goto 138


state 83
	simulate : Simulate . COLON crowd_name SEMICOLON  (161)

	COLON  shift 139
	.  error


state 84
	duration_type : Days .  (170)

	.  reduce 170


state 85
	duration_type : Months .  (172)

	.  reduce 172


state 86
	duration_type : Weeks .  (171)

	.  reduce 171


state 87
	duration_type : Years .  (173)

	.  reduce 173


state 88
	function_call : function_name . COLON formal_parameters SEMICOLON  (145)

	COLON  shift 140
	.  error


state 89
	left_side : variable_name .  (122)
	function_name : variable_name .  (181)

	COLON  reduce 181
	EQUAL  reduce 122


state 90
	declaration : primitive_type . declaration_list SEMICOLON  (142)
	initialization : primitive_type . initialization_list SEMICOLON  (149)

	ID  shift 13
	.  error

	variable_name  goto 141
	initialization_list  goto 142
	declaration_list  goto 143


state 91
	thrill_functions : simulate .  (158)

	.  reduce 158


state 92
	thrill_functions : output .  (157)

	.  reduce 157


state 93
	initialize_duration : duration_type . variable_name EQUAL NUMBER SEMICOLON  (152)

	ID  shift 13
	.  error

	variable_name  goto 144


state 94
	thrill_functions : calculate_revenue .  (156)

	.  reduce 156


state 95
	statement : thrill_functions .  (110)

	.  reduce 110


state 96
	statement : initialization .  (106)

	.  reduce 106


state 97
	statement : function_call .  (105)

	.  reduce 105


state 98
	statement : declaration .  (104)

	.  reduce 104


state 99
	assignment : left_side . EQUAL right_side  (121)

	EQUAL  shift 145
	.  error


state 100
	statement : assignment .  (102)

	.  reduce 102


state 101
	statement : add_attribute .  (101)

	.  reduce 101


state 102
	statements : statements statement .  (99)

	.  reduce 99


state 103
	statement : loop .  (108)

	.  reduce 108


state 104
	statement : condition .  (103)

	.  reduce 103


state 105
	statement : return .  (109)

	.  reduce 109


state 106
	statement : initialize_duration .  (107)

	.  reduce 107


state 107
	block : start_block statements end_block .  (96)

	.  reduce 96


state 108
	function : return_type function_name $$7 COLON . actual_parameters block  (89)
	empty : .  (188)

	Crowd  shift 146
	Number  shift 77
	String  shift 80
	COMMA  reduce 188
	OPEN_PARAN  reduce 188

	primitive_type  goto 147
	data_type  goto 148
	actual_parameters  goto 149
	error_production  goto 150
	empty  goto 5


state 109
	c3 : Set EnergyLevel NUMBER SEMICOLON .  (17)

	.  reduce 17


state 110
	c2 : Set Size NUMBER SEMICOLON .  (16)

	.  reduce 16


state 111
	c1 : Set SpendingCapacity NUMBER SEMICOLON .  (15)

	.  reduce 15


state 112
	c4 : Set ThrillLevel NUMBER SEMICOLON .  (18)

	.  reduce 18


state 113
	p1 : Set Admission NUMBER SEMICOLON .  (28)

	.  reduce 28


state 114
	p2 : Set Capacity NUMBER SEMICOLON .  (29)

	.  reduce 29


state 115
	p3 : Set Cost NUMBER SEMICOLON .  (30)

	.  reduce 30


state 116
	land_definition : Land land_name . $$2 land_attributes land_elements  (34)
	$$2 : .  (33)

	.  reduce 33

	$$2  goto 151


state 117
	land_name : variable_name .  (182)

	.  reduce 182


state 118
	condition : If OPEN . relational_expression CLOSE block  (134)
	condition : If OPEN . relational_expression CLOSE block Else block  (135)

	ID  shift 13
	.  error

	variable_name  goto 152
	relational_expression  goto 153


state 119
	loop : Iterate block . Until OPEN relational_expression CLOSE SEMICOLON  (153)

	Until  shift 154
	.  error


state 120
	constant : NUMBER .  (174)

	.  reduce 174


state 121
	return : Return SEMICOLON .  (155)

	.  reduce 155


state 122
	constant : STRING_CONST .  (175)

	.  reduce 175


state 123
	constant_or_variable : variable_name .  (165)

	.  reduce 165


state 124
	constant_or_variable : constant .  (164)

	.  reduce 164


state 125
	return : Return constant_or_variable . SEMICOLON  (154)

	SEMICOLON  shift 155
	.  error


state 126
	add_attribute : Set Capacity . value In variable_name SEMICOLON  (111)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 158


state 127
	add_attribute : Set Cost . value In variable_name SEMICOLON  (112)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 159


state 128
	add_attribute : Set Employees . value In variable_name SEMICOLON  (113)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 160


state 129
	add_attribute : Set EnergyIncrease . value In variable_name SEMICOLON  (114)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 161


state 130
	add_attribute : Set EnergyLevel . value In variable_name SEMICOLON  (115)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 162


state 131
	add_attribute : Set EnergyLost . value In variable_name SEMICOLON  (116)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 163


state 132
	add_attribute : Set Size . value In variable_name SEMICOLON  (117)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 164


state 133
	add_attribute : Set SpendLevel . value In variable_name SEMICOLON  (119)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 165


state 134
	add_attribute : Set SpendingCapacity . value In variable_name SEMICOLON  (118)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 166


state 135
	add_attribute : Set ThrillLevel . value In variable_name SEMICOLON  (120)

	NUMBER  shift 156
	ID  shift 13
	.  error

	variable_name  goto 157
	value  goto 167


state 136
	calculate_revenue : CalculateRevenue COLON . crowd_name COMMA duration_name SEMICOLON  (159)

	ID  shift 13
	.  error

	crowd_name  goto 168
	variable_name  goto 15


state 137
	constant_variable_chain : constant_or_variable .  (163)

	.  reduce 163


state 138
	output : Print constant_variable_chain . SEMICOLON  (160)
	constant_variable_chain : constant_variable_chain . COMMA constant_or_variable  (162)

	SEMICOLON  shift 169
	COMMA  shift 170
	.  error


state 139
	simulate : Simulate COLON . crowd_name SEMICOLON  (161)

	ID  shift 13
	.  error

	crowd_name  goto 171
	variable_name  goto 15


state 140
	function_call : function_name COLON . formal_parameters SEMICOLON  (145)
	empty : .  (188)

	ID  shift 13
	SEMICOLON  reduce 188
	COMMA  reduce 188

	variable_name  goto 172
	formal_parameters  goto 173
	error_production  goto 174
	empty  goto 5


state 141
	declaration_list : variable_name .  (144)
	initialization_list : variable_name . EQUAL constant  (151)

	EQUAL  shift 175
	SEMICOLON  reduce 144
	COMMA  reduce 144


state 142
	initialization : primitive_type initialization_list . SEMICOLON  (149)
	initialization_list : initialization_list . COMMA variable_name EQUAL constant  (150)

	SEMICOLON  shift 176
	COMMA  shift 177
	.  error


state 143
	declaration : primitive_type declaration_list . SEMICOLON  (142)
	declaration_list : declaration_list . COMMA variable_name  (143)

	SEMICOLON  shift 178
	COMMA  shift 179
	.  error


state 144
	initialize_duration : duration_type variable_name . EQUAL NUMBER SEMICOLON  (152)

	EQUAL  shift 180
	.  error


state 145
	assignment : left_side EQUAL . right_side  (121)

	NUMBER  shift 120
	ID  shift 13
	OPEN  shift 181
	STRING_CONST  shift 122
	CalculateRevenue  shift 81
	.  error

	function_name  goto 88
	variable_name  goto 182
	constant  goto 183
	calculate_revenue  goto 184
	function_call  goto 185
	arithmetic_expression  goto 186
	right_side  goto 187


state 146
	data_type : Crowd .  (166)

	.  reduce 166


state 147
	data_type : primitive_type .  (167)

	.  reduce 167


state 148
	actual_parameters : data_type . variable_name  (94)

	ID  shift 13
	.  error

	variable_name  goto 188


state 149
	function : return_type function_name $$7 COLON actual_parameters . block  (89)
	actual_parameters : actual_parameters . COMMA data_type variable_name  (93)

	COMMA  shift 189
	OPEN_PARAN  shift 48
	.  error

	block  goto 190
	start_block  goto 50


state 150
	actual_parameters : error_production .  (95)

	.  reduce 95


state 151
	land_definition : Land land_name $$2 . land_attributes land_elements  (34)

	Set  shift 191
	.  error

	land_attributes  goto 192


state 152
	relational_expression : variable_name . LESSEQUAL constant_or_variable  (136)
	relational_expression : variable_name . GREATEQUAL constant_or_variable  (137)
	relational_expression : variable_name . NOTEQUAL constant_or_variable  (138)
	relational_expression : variable_name . LESS constant_or_variable  (139)
	relational_expression : variable_name . GREAT constant_or_variable  (140)
	relational_expression : variable_name . ISEQUAL constant_or_variable  (141)

	NOTEQUAL  shift 193
	LESSEQUAL  shift 194
	GREATEQUAL  shift 195
	ISEQUAL  shift 196
	LESS  shift 197
	GREAT  shift 198
	.  error


state 153
	condition : If OPEN relational_expression . CLOSE block  (134)
	condition : If OPEN relational_expression . CLOSE block Else block  (135)

	CLOSE  shift 199
	.  error


state 154
	loop : Iterate block Until . OPEN relational_expression CLOSE SEMICOLON  (153)

	OPEN  shift 200
	.  error


state 155
	return : Return constant_or_variable SEMICOLON .  (154)

	.  reduce 154


state 156
	value : NUMBER .  (176)

	.  reduce 176


state 157
	value : variable_name .  (177)

	.  reduce 177


state 158
	add_attribute : Set Capacity value . In variable_name SEMICOLON  (111)

	In  shift 201
	.  error


state 159
	add_attribute : Set Cost value . In variable_name SEMICOLON  (112)

	In  shift 202
	.  error


state 160
	add_attribute : Set Employees value . In variable_name SEMICOLON  (113)

	In  shift 203
	.  error


state 161
	add_attribute : Set EnergyIncrease value . In variable_name SEMICOLON  (114)

	In  shift 204
	.  error


state 162
	add_attribute : Set EnergyLevel value . In variable_name SEMICOLON  (115)

	In  shift 205
	.  error


state 163
	add_attribute : Set EnergyLost value . In variable_name SEMICOLON  (116)

	In  shift 206
	.  error


state 164
	add_attribute : Set Size value . In variable_name SEMICOLON  (117)

	In  shift 207
	.  error


state 165
	add_attribute : Set SpendLevel value . In variable_name SEMICOLON  (119)

	In  shift 208
	.  error


state 166
	add_attribute : Set SpendingCapacity value . In variable_name SEMICOLON  (118)

	In  shift 209
	.  error


state 167
	add_attribute : Set ThrillLevel value . In variable_name SEMICOLON  (120)

	In  shift 210
	.  error


state 168
	calculate_revenue : CalculateRevenue COLON crowd_name . COMMA duration_name SEMICOLON  (159)

	COMMA  shift 211
	.  error


state 169
	output : Print constant_variable_chain SEMICOLON .  (160)

	.  reduce 160


state 170
	constant_variable_chain : constant_variable_chain COMMA . constant_or_variable  (162)

	NUMBER  shift 120
	ID  shift 13
	STRING_CONST  shift 122
	.  error

	variable_name  goto 123
	constant  goto 124
	constant_or_variable  goto 212


state 171
	simulate : Simulate COLON crowd_name . SEMICOLON  (161)

	SEMICOLON  shift 213
	.  error


state 172
	formal_parameters : variable_name .  (147)

	.  reduce 147


state 173
	function_call : function_name COLON formal_parameters . SEMICOLON  (145)
	formal_parameters : formal_parameters . COMMA variable_name  (146)

	SEMICOLON  shift 214
	COMMA  shift 215
	.  error


state 174
	formal_parameters : error_production .  (148)

	.  reduce 148


state 175
	initialization_list : variable_name EQUAL . constant  (151)

	NUMBER  shift 120
	STRING_CONST  shift 122
	.  error

	constant  goto 216


state 176
	initialization : primitive_type initialization_list SEMICOLON .  (149)

	.  reduce 149


state 177
	initialization_list : initialization_list COMMA . variable_name EQUAL constant  (150)

	ID  shift 13
	.  error

	variable_name  goto 217


state 178
	declaration : primitive_type declaration_list SEMICOLON .  (142)

	.  reduce 142


state 179
	declaration_list : declaration_list COMMA . variable_name  (143)

	ID  shift 13
	.  error

	variable_name  goto 218


state 180
	initialize_duration : duration_type variable_name EQUAL . NUMBER SEMICOLON  (152)

	NUMBER  shift 219
	.  error


state 181
	arithmetic_expression : OPEN . arithmetic_expression CLOSE  (131)

	NUMBER  shift 120
	ID  shift 13
	OPEN  shift 181
	STRING_CONST  shift 122
	.  error

	variable_name  goto 220
	constant  goto 183
	arithmetic_expression  goto 221


182: shift/reduce conflict (shift 222, reduce 132) on SEMICOLON
state 182
	right_side : variable_name . SEMICOLON  (123)
	arithmetic_expression : variable_name .  (132)
	function_name : variable_name .  (181)

	SEMICOLON  shift 222
	COLON  reduce 181
	PLUS  reduce 132
	MINUS  reduce 132
	MUL  reduce 132
	DIV  reduce 132


state 183
	arithmetic_expression : constant .  (133)

	.  reduce 133


state 184
	right_side : calculate_revenue .  (126)
